# openglproject

./: CMakeLists.txt  README.md  Shader.h  Uniform_test.cpp  helloworld.cpp  openglproject.sln  openglproject.vcxproj  openglproject.vcxproj.filters  pipeline_test.cpp  shader_f.txt  shader_soil_v.txt  shader_v.txt  soil_test.cpp
SOIL2TOOL/lib/: soil2-debug.lib  soil2.lib
src/: Camera.h  LightPoint.h  Shader.h  camera_test.cpp  glad_test.cpp  light_f.txt  light_test.cpp  light_v.txt  openglproject.cpp  openglproject.sln  openglproject.vcxproj  openglproject.vcxproj.filters  shader_camera_f.txt  shader_camera_v.txt  shader_f.txt  shader_light_f.txt  shader_light_v.txt  shader_soil_f.txt  shader_soil_f_2.txt  shader_soil_v_2.txt  shader_transform_3D_v.txt  shader_uniform_f.txt  shader_v.txt  soil_test_2.cpp  transform_3D.cpp
